feat: terminando responsividad de hero del home

--- a/src/components/common/BarMenuElement.astro
+++ b/src/components/common/BarMenuElement.astro
@@ -9,7 +9,7 @@ export interface Props {
 const { link, name, currentPage } = Astro.props
 ---
 
-<li class="h-fit"><a class={`font-roboto font-semibold uppercase ${name === currentPage ? 'underline' : ''} transition-colors underline-offset-8 text-sm 2xl:text-xl 4xl:text-2xl text-white hover:text-reciclacel_light_blue decoration-reciclacel_light_blue`} href={link.link}>{link.text}</a></li>
+<li class="h-fit"><a class={`font-roboto font-semibold uppercase ${name === currentPage ? 'underline' : ''} transition-colors underline-offset-8 text-sm 2xl:text-xl 3xl:text-2xl 4xl:text-3xl text-white hover:text-reciclacel_light_blue decoration-reciclacel_light_blue`} href={link.link}>{link.text}</a></li>
 
 <style>
     a {
