--- a/src/components/common/BarMenuElementDropdown.astro
+++ b/src/components/common/BarMenuElementDropdown.astro
@@ -14,7 +14,7 @@ const { link, name, elements, currentPage, children, isMobileDescomposition = fa
 ---
 
 <li class="dropdown relative h-full">
-    <a class={`space-x-2 gap-5 font-roboto font-semibold uppercase ${name === currentPage ? 'underline' : ''} transition-colors underline-offset-8 text-sm 2xl:text-xl 4xl:text-2xl text-white hover:text-reciclacel_light_blue decoration-reciclacel_light_blue`} href={link.link}>
+    <a class={`space-x-2 gap-5 font-roboto font-semibold uppercase ${name === currentPage ? 'underline' : ''} transition-colors underline-offset-8 text-sm 2xl:text-xl 3xl:text-2xl 4xl:text-3xl text-white hover:text-reciclacel_light_blue decoration-reciclacel_light_blue`} href={link.link}>
         <span>{link.text}</span>
         <i class="bi bi-chevron-up"></i>
     </a>
