--- a/src/components/home/HeroSlide.astro
+++ b/src/components/home/HeroSlide.astro
@@ -9,7 +9,7 @@ const { kicker, title } = Astro.props
 
 <div class="swiper-slide">
     <div class="flex flex-col">
-        <h3 class="mb-0 lg:mb-4 mt-4 lg:mt-[3.15rem] uppercase font-archivo font-semibold md:text-lg lg:text-lg 2xl:text-xl 3xl:text-2xl 4xl:text-3xl text-white">{kicker}</h3>
+        <h3 class="mb-0 lg:mb-4 mt-4 lg:mt-[3.15rem] uppercase font-archivo font-semibold md:text-lg lg:text-3xl 2xl:text-4xl 4xl:text-5xl text-white">{kicker}</h3>
         <h2 class="w-full md:w-2/3 mt-4 lg:mt-[1.90rem] uppercase text-3xl md:text-4xl lg:text-5xl 2xl:text-7xl 3xl:text-8xl 4xl:text-9xl font-semibold font-kanit leading-none text-white">{title}</h2>
     </div>
 </div>
