--- a/src/layouts/common/Footer.astro
+++ b/src/layouts/common/Footer.astro
@@ -12,7 +12,7 @@ import ParagraphSection from "../../components/common/ParagraphSection.astro";
     <div class="max-w-full xl:max-w-7xl 2xl:max-w-[95.5rem] 3xl:max-w-[120rem] mx-auto px-5 pb-10 flex flex-col">
         <nav class="w-full grid lg:flex lg:flex-wrap lg:justify-between grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-[unset] gap-x-10 gap-y-10">
             <div class="max-w-sm 2xl:max-w-md col-span-1">
-                <img class="xl:h-16 2xl:h-20 3xl:h-24 4xl:h-28" src="/svg/logo.svg" alt="reciclacel logo">
+                <img class="xl:h-16 2xl:h-20 3xl:h-24 4xl:h-28 mb-5" src="/svg/logo.svg" alt="reciclacel logo">
                 <ParagraphSection
                     text="Somos una empresa mexicana, especializada en la recolección, producción, comercialización y distribución de materiales reciclables desde 2007."
                     textColor="text-white"
