--- a/src/components/common/BlogCard.astro
+++ b/src/components/common/BlogCard.astro
@@ -1,4 +1,6 @@
 ---
+import { Image } from 'astro:assets'
+
 export interface Props {
     id: string
     category: string
@@ -11,9 +13,12 @@ export interface Props {
 const { id, category, image, date, title, intro } = Astro.props
 ---
 
+
 <div class="h-fit w-full flex flex-col">
-    <div class="h-[200px] 2xl:h-72 3xl:h-80 4xl:h-[96] w-full relative">
-        <img class="h-full w-full object-cover" src={image} alt={`image ${title}`}>
+    <div class="h-[200px] 2xl:h-72 3xl:h-80 4xl:h-96 w-full relative">
+        <div class="w-full h-full">
+            <Image style="height: 100%; width: 100%; object-fit: cover;" width="100" height="200" class="h-full w-full object-cover" src="https://a.storyblok.com/f/228332/1500x1000/b3ccd8a422/1.webp" alt={`image ${title}`}>
+        </div>
         <div class="absolute top-3 right-3 font-roboto font-bold uppercase tracking-wider text-xs 2xl:text-lg 3xl:text-xl 4xl:text-2xl p-1.5 ml-2 bg-reciclacel_yellow">
             <span class="line-clamp-1 break-all">{category}</span>
         </div>
