--- a/src/components/common/ProgressTrackerElement.astro
+++ b/src/components/common/ProgressTrackerElement.astro
@@ -1,7 +1,9 @@
 ---
+import { Image } from 'astro:assets';
+
 export interface Props {
     text: string
-    icon: string 
+    icon: ImageMetadata 
 }
 
 const { text, icon } = Astro.props
@@ -11,7 +13,9 @@ const { text, icon } = Astro.props
     <div class="progress_tracker_circle w-6 h-6 3xl:w-9 3xl:h-9 4xl:w-12 4xl:h-12 text-9xl rounded-full bg-reciclacel_yellow">&nbsp;</div>
     <div class="w-full h-full flex flex-col justify-between gap-5">
         <span class="max-w-full lg:max-w-[298px] 3xl:max-w-full font-roboto text-left sm:text-xl 3xl:text-2xl 4xl:text-3xl text-white">{text}</span>
-        <img class="hidden lg:block h-20 xl:2xl:h-24 3xl:h-28" src={icon} alt="tracker_icon">
+        <div class="hidden lg:block h-20 xl:2xl:h-24 3xl:h-28">
+            <Image src={icon} alt="tracker_icon" style="height: 100%; width: 100%;" />
+        </div>
     </div>
 </div>
 
