--- a/src/layouts/home/QuoteProcess.astro
+++ b/src/layouts/home/QuoteProcess.astro
@@ -4,6 +4,10 @@ import ProgressTrackerElement from "../../components/common/ProgressTrackerEleme
 import SubtitleWithLine from "../../components/common/SubtitleWithLine.astro"
 import TitleSection from "../../components/common/TitleSection.astro"
 
+import tracker1 from "../../assets/svg/tracker/tracker1.svg"
+import tracker2 from "../../assets/svg/tracker/tracker2.svg"
+import tracker3 from "../../assets/svg/tracker/tracker3.svg"
+import tracker4 from "../../assets/svg/tracker/tracker4.svg"
 ---
 
 <section class="w-full py-20 lg:py-44 bg-reciclacel_dark_blue">
@@ -15,10 +19,10 @@ import TitleSection from "../../components/common/TitleSection.astro"
     <div class="progress_tracker_line w-full my-20 relative">
         <div class="max-w-full xl:max-w-7xl 2xl:max-w-[95.5rem] 3xl:max-w-[120rem] mx-auto px-5 flex flex-col gap-10">
             <div class="w-full grid grid-cols-1 lg:grid-cols-4 gap-x-5 gap-y-5">
-                <ProgressTrackerElement text="1. Establece cuál es el producto de tu interés." icon="/svg/tracker/tracker1.svg"/>
-                <ProgressTrackerElement text="2. Especifíca la cantidad de producto." icon="/svg/tracker/tracker2.svg"/>
-                <ProgressTrackerElement text="3. Compártenos tu localidad." icon="/svg/tracker/tracker3.svg"/>
-                <ProgressTrackerElement text="4. Recibirás tu cotización en menos de 24 horas." icon="/svg/tracker/tracker4.svg"/>
+                <ProgressTrackerElement text="1. Establece cuál es el producto de tu interés." icon={tracker1} />
+                <ProgressTrackerElement text="2. Especifíca la cantidad de producto." icon={tracker2} />
+                <ProgressTrackerElement text="3. Compártenos tu localidad." icon={tracker3} />
+                <ProgressTrackerElement text="4. Recibirás tu cotización en menos de 24 horas." icon={tracker4} />
             </div>
         </div>
     </div>
